--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,4 +1,3 @@
-# Config for node URLs
 Ports:
   zone-0-0:
     http: 8610
@@ -27,3 +26,4 @@ Ports:
   zone-2-2:
     http: 8678
     ws: 8679
+EtxFreq: 0
